# Proyecto_I_AyEDII

./: CMakeLists.txt  Client  Client.cpp  README.md  Server  Server.cpp  bmp.h
src/: CMakeLists.txt  Server.cpp
